--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["WilliamD <duanbwilliam@gmail.com> and contributors"]
 version = "0.1.0"
 
 [deps]
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
 [compat]
